# mnist-vae

./: README.md  experiment.py  logger.py  main.py  mnist.py  pyproject.toml  renderer.py  requirements-tools.txt  requirements.txt  setup.py  tsne.py
assets/: icon.icns
mnist_vae/: __init__.py  __main__.py
mnist_vae/_src/: background.py  experiment.py  logger.py  renderer.py
mnist_vae/_src/tsne/: __init__.py  renderer.py
mnist_vae/examples/: conv_models.py  linear_models.py
snap/: snapcraft.yaml
snap/snap/gui/: mnist-vae.desktop
tools/: README.md  build_app.py  build_gifs.py
